# founder-scraper

./: .env.example  .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt  server.py
.claude/: launch.json
analyzer/: discovery.py  enricher.py  product_eval.py  scorer.py
api/: index.py
config/: thesis.py
models/: founder.py
scraper/: brave_search.py  crunchbase.py  ddg.py  github.py  google_search.py  linkedin.py  multi_search.py  pdl.py  retry.py  safety.py  twitter.py  web_search.py
src/: index.py
templates/: index.html
