[project]
name = "founder-scraper"
version = "0.1.0"
description = "AI-powered founder enrichment and scoring tool for VC deal flow"
requires-python = ">=3.9"
dependencies = [
    "httpx==0.27.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "anthropic==0.42.0",
    "pydantic==2.10.0",
    "rich==13.9.0",
    "python-dotenv==1.0.1",
    "duckduckgo-search==7.0.0",
]

[project.scripts]
founder-scraper = "main:main"
