[project]
name = "founder-scraper"
version = "0.1.0"
description = "AI-powered founder enrichment and scoring tool for VC deal flow"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "anthropic",
    "pydantic",
    "rich",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "ddgs",
]

[project.scripts]
founder-scraper = "main:main"
